<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SFS Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="my_appts_option">My Appointments</string>
    <string name="make_appts_option">Make an Appointment</string>
    <string name="messages_option">My Messages</string>
    <string name="immun_option">Immunizations</string>
    <string name="home_option">Home</string>
    <string name="shs_main_screen">UPenn SHS</string>
    <string name="title_activity_my_appointments">MyAppointments</string>
    <string name="Login">Login</string>
    <string name="PennKey">PennKey</string>
    <string name="Password">Password</string>
    <string name="Birthday">Date of Birth (YYYY-MM-DD)</string>
    <string name="PennLogo">Penn Logo</string>
    <string name="title_activity_login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_display_immunizations">Immunizations</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="reauth">Re-Authorize</string>
    <string name="reauthtop">You Need to Re-Authorize</string>
    <string name="shs_hours">Hours:\nMonday: 8:00am - 7:30pm\nTuesday: 8:00am - 7:30pm\nWednesday: 8:00am - 7:30pm\nThursday: 10:30am - 5:30pm\nFriday: 8:00am - 5:30pm\nSaturday: 11:00am - 4:30pm</string>

    <string-array name="year_array">
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
    </string-array>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="title_activity_appointment_message">AppointmentMessageActivity</string>
    <string name="title_activity_appointment_text_input">AppointmentTextInputActivity</string>
    <string name="title_activity_appointment_calendar">AppointmentCalendar</string>
    <string name="title_activity_appointment_book">AppointmentBookActivity</string>
    <string name="title_activity_my_messages">MyMessages</string>
    <string name="title_activity_re_auth">ReAuth</string>
    <string name="title_activity_message_detail">MessageDetail</string>
    <string name="title_activity_message_reply">MessageReply</string>
    <string name="title_activity_appointment_confirm">AppointmentConfirmActivity</string>
    <string name="title_activity_appointment_phone_input">AppointmentPhoneInputActivity</string>
    <string name="title_activity_appointment_general">AppointmentGeneralActivity</string>

</resources>
