<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen" >

    <ImageView
        android:id="@+id/penn_logo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha=".1"
        android:contentDescription="@string/PennLogo"
        android:src="@drawable/penn_logo" />

    <TextView
        android:id="@+id/messageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/penn_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/shs_main_screen"
        android:textSize="30sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/penn_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:text="@string/shs_hours"
        android:textSize="20sp" />
    
</RelativeLayout>