<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="1"
    android:orientation="horizontal" 
    tools:context=".LoginActivity">

    <Space
        android:id="@+id/Space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill"/>

    <EditText
        android:id="@+id/phoneNumberField"
        android:labelFor="@id/phoneNumberField"
        android:inputType="text"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/PennKey" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:labelFor="@id/editText2"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumberField"
        android:layout_below="@+id/phoneNumberField"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Password" />
    
    
    <ImageView
        android:id="@+id/penn_logo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha=".1"
        android:contentDescription="@string/PennLogo"
        android:src="@drawable/penn_logo" />

    <Spinner
        android:id="@+id/spinnerday"
        android:layout_width="100dp"     
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignTop="@+id/spinnermonth"
        android:layout_toRightOf="@+id/spinnermonth"
        android:entries="@array/day_array" />

    <Spinner
        android:id="@+id/spinnermonth"
        android:layout_width="100dp"     
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinneryear"
        android:layout_toRightOf="@+id/spinneryear"
        android:entries="@array/month_array" />

    <Spinner
        android:id="@+id/spinneryear"
        android:layout_width="100dp"     
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:entries="@array/year_array" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="login"
        android:text="@string/Login" />

</RelativeLayout>